[project]
name = "smriti-server"
version = "0.1.0"
description = "smriti server"
authors = [
    {name = "Nitin Sharma"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]
license = { text = "GPL-3.0" }

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
