[project]
name = "smriti-server"
version = "0.1.0"
description = "smriti server"
authors = [{ name = "Nitin Sharma" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.124.2",
    "python-multipart>=0.0.20",
]
license = { text = "GPL-3.0" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]
